feat: add Google OAuth integration for login and signup
- Updated index.html to include Google Identity Services script
- Enhanced App.js to include routes for Forgot Password and Reset Password
- Improved Login component with Google sign-in functionality and styled components
- Updated Signup component to support Google sign-up
- Added Forgot Password and Reset Password components with respective styles
- Configured environment variables for Google OAuth client ID
- Created README.md with project details, setup instructions, and API endpoints

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,9 +15,11 @@ COPY . .
 # Build args for environment variables
 ARG REACT_APP_API_KEY
 ARG REACT_APP_BACKEND_URL
+ARG REACT_APP_GOOGLE_CLIENT_ID
 
 ENV REACT_APP_API_KEY=$REACT_APP_API_KEY
 ENV REACT_APP_BACKEND_URL=$REACT_APP_BACKEND_URL
+ENV REACT_APP_GOOGLE_CLIENT_ID=$REACT_APP_GOOGLE_CLIENT_ID
 
 # Build the app
 RUN npm run build
